# ChatL

Client/: CMakeLists.txt  Client.cpp  Client.h  MainCl.cpp  Messages.cpp  Messages.h  SendingManagerLinux.cpp  Users.cpp  ViewsManager.cpp
Server/: CMakeLists.txt  MainSe.cpp  Mediator.cpp  Mediator.h  Models.cpp  Models.h  SendingManagerLinux.h  Server.cpp  Server.h  Users.h  ViewsManager.h
