cmake_minimum_required(VERSION 2.8)

project(ClientLinux)

set(SOURCE_EXE MainCl.cpp)
set(SOURCE_LIB1 Client.cpp)
set(HEADER_LIB1 Client.h)
set(SOURCE_LIB2 Mediator.cpp)
set(HEADER_LIB2 Mediator.h)
set(SOURCE_LIB3 Messages.cpp)
set(HEADER_LIB3 Messages.h)
set(SOURCE_LIB4 Models.cpp)
set(HEADER_LIB4 Models.h)
set(SOURCE_LIB5 SendingManagerLinux.cpp)
set(HEADER_LIB5 SendingManagerLinux.h)
set(SOURCE_LIB6 Users.cpp)
set(HEADER_LIB6 Users.h)
set(SOURCE_LIB7 ViewsManager.cpp)
set(HEADER_LIB7 ViewsManager.h)

add_library(Client STATIC ${SOURCE_LIB1} ${HEADER_LIB1})
add_library(Mediator STATIC ${SOURCE_LIB2} ${HEADER_LIB2})
add_library(Messages STATIC ${SOURCE_LIB3} ${HEADER_LIB3})
add_library(Models STATIC ${SOURCE_LIB4} ${HEADER_LIB4})
add_library(SendingManagerLinux STATIC ${SOURCE_LIB5} ${HEADER_LIB5})
add_library(Users STATIC ${SOURCE_LIB6} ${HEADER_LIB6})
add_library(ViewsManager STATIC ${SOURCE_LIB7} ${HEADER_LIB7})

add_executable(ChatCl ${SOURCE_EXE})
target_link_libraries(ChatCl Client SendingManagerLinux ViewsManager Mediator Messages Users Models -std=c++14 -pthread -lncurses)